fixed projects overlapping navbar

--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -7,9 +7,7 @@
     width: 100%;
     background-color: #F4F1DE;
     color: #3D405B;
-}
-.navcontainer.sticky {
-    position: absolute !important;
+    z-index: 2;
 }
 
 .banner-left{
